--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 Django==4.2.5
 django-debug-toolbar==4.2.0
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
 idna==3.4
 psycopg2-binary==2.9.7
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
