--- a/PodcastPlatform/docker-compose.yml
+++ b/PodcastPlatform/docker-compose.yml
@@ -19,6 +19,8 @@ services:
 
   db:
     image: postgres:14
+    volumes:
+      - .:/code
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
 
@@ -33,5 +35,7 @@ services:
 
   redis:
     image: "redis:alpine"
+    volumes:
+      - .:/code
     ports:
       - "6379:6379"
