--- a/PodcastPlatform/Dockerfile
+++ b/PodcastPlatform/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /code
 
-COPY ../requirements.txt /code/
+COPY requirements.txt /code/
 RUN pip install -r requirements.txt
 
 COPY . /code/
