--- a/PodcastPlatform/Dockerfile
+++ b/PodcastPlatform/Dockerfile
@@ -4,8 +4,10 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /code
-
 COPY requirements.txt /code/
+
 RUN pip install -r requirements.txt
+
+EXPOSE 8000
 
 COPY . /code/
