--- a/PodcastPlatform/Dockerfile
+++ b/PodcastPlatform/Dockerfile
@@ -8,6 +8,8 @@ COPY requirements.txt /code/
 
 RUN pip install -r requirements.txt
 
-EXPOSE 8000
-
 COPY . /code/
+
+RUN python manage.py migrate
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
