--- a/PodcastPlatform/requirements.txt
+++ b/PodcastPlatform/requirements.txt
@@ -24,6 +24,7 @@ django-nine==0.2.7
 django-redis==5.3.0
 django-request-logging==0.7.5
 django-rest-framework==0.1.0
+django-rest-passwordreset==1.3.0
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
@@ -32,6 +33,9 @@ elasticsearch==8.10.0
 elasticsearch-dsl==8.9.0
 frozenlist==1.4.0
 geoip2==4.7.0
+gevent==23.9.1
+greenlet==3.0.0
+grequests==0.7.0
 idna==3.4
 kombu==5.3.2
 maxminddb==2.4.0
@@ -57,3 +61,5 @@ urllib3==1.26.17
 vine==5.0.0
 wcwidth==0.2.6
 yarl==1.9.2
+zope.event==5.0
+zope.interface==6.1
