--- a/PodcastPlatform/requirements.txt
+++ b/PodcastPlatform/requirements.txt
@@ -25,6 +25,7 @@ django-redis==5.3.0
 django-request-logging==0.7.5
 django-rest-framework==0.1.0
 django-rest-passwordreset==1.3.0
+django-rosetta==0.9.9
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
@@ -42,6 +43,7 @@ maxminddb==2.4.0
 multidict==6.0.4
 packaging==23.2
 pika==1.3.2
+polib==1.2.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
 pycparser==2.21
